# RAG

./: .env  .gitignore  chroma_db.py  main.py  pyproject.toml  requirements.txt
chroma-db/d0079aff-53a5-4dc0-b9a3-d48ccea3ac0a/: index_metadata.pickle
document loaders/: notes.txt  page.py  pdf.py  test.py
retrievers/: arixv.py  mmr.py
vector stores/: DB.py
